<?xml version="1.0" encoding="utf-8"?>

<!-- @author GeckoApps Team -->

<resources>
    
    <string-array
        name="metric_systems">
        
        <item>SI</item>
        <item>Sistema Imperial</item>
        
    </string-array>

    <!-- App info. -->
    <string name="app_name">Meu Bebê</string>
    <string name="gecko_apps">Gecko Apps</string>

    <!-- Common. -->
    <string name="add_photo">Toque na imagem para adicionar uma foto do seu bebê</string>
    <string name="my_baby">Meu Bebê</string>
    <string name="books">Livros</string>
    <string name="vaccines">Vacinas</string>
    <string name="historic">Histórico</string>
    <string name="progress">Progresso</string>
    <string name="vaccine">Vacina</string>
    <string name="login">Login</string>
    <string name="login_hint">Ex.: pai@gmail.com</string>
    <string name="password">Senha</string>
    <string name="create_user">Novo usuário</string>
    <string name="name">Nome</string>
    <string name="name_hint">Ex.: João</string>
    <string name="birth">Nascimento</string>
    <string name="birth_hint">Selecione a data</string>
    <string name="sex">Sexo</string>
    <string name="bmi">IMC</string>
    <string name="height">Altura</string>
    <string name="height_hint">Ex.: 90.0</string>
    <string name="weight">Peso</string>
    <string name="weight_hint">Ex.: 4.5</string>
    <string name="boy">Menino</string>
    <string name="girl">Menina</string>
    <string name="bebe">Bebê</string>
    <string name="month">Mês</string>
    <string name="age">Idade</string>
    <string name="age_hint">Ex.: 5 meses</string>
    <string name="alarm">Lembrete</string>
    <string name="add_baby">Adicionar Bebê</string>
    <string name="add_reminder">Adicionar Lembrete</string>
    <string name="edit_baby">Editar Bebê</string>
    <string name="camera">Câmera</string>
    <string name="gallery">Galeria</string>
    <string name="cancel">Cancelar</string>
    <string name="rotate_cw">Girar horário</string>
    <string name="rotate_ccw">Girar anti-horário</string>
    <string name="rotate_angle">Girar ângulo</string>

    <!-- Errors -->
    <string name="baby_name_not_set">Você precisa definir o nome do bebê</string>
    <string name="baby_birth_not_set">Você precisa definir a data de nascimento do bebê</string>
    <string name="baby_gender_not_set">Você precisa definir o sexo do bebê</string>
    <string name="historic_age_not_set">Você precisa definir o mês da medida do bebê</string>
    <string name="historic_weight_not_set">Você precisa definir o peso do bebê</string>
    <string name="historic_height_not_set">Você precisa definir a altura do bebê</string>
    <string name="vaccine_name_not_set">Você precisa definir o nome da vacina</string>
    <string name="vaccine_month_not_set">Você precisa definir o mês da vacina</string>
    <string name="vaccine_dose_not_set">Você precisa definir a dose da vacina</string>
    <string name="reminder_date_not_set">Você precisa definir a data do lembrete</string>
    <string name="reminder_time_not_set">Você precisa definir a hora do lembrete</string>
    <string name="username_not_set">Você precisa preencher o login</string>
    <string name="password_not_set">Você precisa preencher a senha</string>
    <string name="wrong_login_or_password">Login ou senha errados</string>
    <string name="past_time">Você deve escolher uma hora e data futuras à atual</string>
    
    
    <!-- Preferences -->
    <string name="my_baby_preferences">Preferências</string>
    
    <string name="save_username">Salvar último login</string>
    <string name="save_username_summary">Salvar nome de usuário do último login</string>
    
    <string name="save_password">Salvar senha</string>
    <string name="save_password_summary">Salvar senha do último login</string>
    
    <string name="set_auto_progress">Setar Progresso Automaticamente</string>
    <string name="set_auto_progress_summary">Setar Progresso Automaticamente para novos bebês criados</string>
    
    <string name="set_auto_vaccines">Setar Vacinas Automaticamente</string>
    <string name="set_auto_vaccines_summary">Setar Vacinas Automaticamente para novos bebês criados</string>
    
    <string name="show_imc">Mostrar IMC</string>
    <string name="show_imc_summary">Mostrar IMC na view de Histórico</string>
    
    <string name="metric_system">Sistema de medidas</string>
    <string name="metric_system_summary">Sistema de medidas usado para o cálculo da altura e peso</string>
    <string name="si">SI</string>

    <!-- Views graphics and full_screen_graphics. -->
    <string name="graphics">Gráficos</string>
    <string name="full_screen_graphic">Gráficos Tela Cheia</string>
    <string name="baby_name">Nome</string>
    <string name="baby_name_hint">Digite o nome e sobrenome</string>
    <string name="baby_boy">Menino</string>
    <string name="baby_girl">Menina</string>
    <string name="baby_birth">Nascimento</string>
    <string name="baby_birth_hint">Selecione a data</string>
    <string name="baby_height">Altura</string>
    <string name="baby_height_hint">Em centímetros</string>
    <string name="baby_weight">Peso</string>
    <string name="baby_weight_hint">Em kilos</string>
    <string name="diagnostic">Diagnóstico</string>

    <!-- Views vaccine, vaccine_info and add_vaccine. -->
    <string name="vaccine_details">Detalhes da Vacina</string>
    <!-- View title. -->
    <string name="add_vaccine">Adicionar Vacina</string>
    <!-- View title. -->
    <string name="vaccines_all">Todas as Vacinas</string>
    <string name="reminders">Lembretes</string>
    <string name="vaccines_reminder">Lembrete</string>
    <string name="vaccines_taken">Vacinas Tomadas</string>
    <string name="vaccine_name">Nome da Vacina</string>
    <string name="vaccine_name_hint">Ex.: BCG</string>
    <string name="vaccine_dose">Dose da Vacina</string>
    <string name="vaccine_dose_hint">Ex.: 1ª dose</string>
    <string name="vaccine_month">Mês</string>
    <string name="vaccine_month_hint">Selecione o mês</string>
    <string name="vaccine_description">Descrição</string>
    <string name="vaccine_description_hint">Ex.: Fornecida a crianças com no mínimo 2 kg, essa vacina, aplicada em dose única, imuniza contra a tuberculose</string>
    <string name="hint_date">Data</string>
    <string name="hint_time">Hora</string>

    <!-- Views progress and progress_info. -->
    <string name="progress_info">Progresso</string>
    <string name="progress_month">Mês</string>
    <string name="healthy">Seu bebê está saudável.</string>
    <string name="not_healthy">Seu bebê não está saudável.</string>

    <!-- Views progress and progress_info. -->
    <string name="add_historic">Adicionar Histórico</string>
    <string name="historic_info">Entre com as medidas do bebê para o mês.</string>

    <!-- Views tips and tips_info -->
    <string name="tips_info">Dicas</string>
    <string name="tips">Dicas</string>
    <string name="tips_month">Mês</string>
    <string name="breast_feeding">Amamentação</string>
    <string name="care">Cuidados</string>
    <string name="feeding">Alimentação</string>
    <string name="first_days">Primeiros Dias</string>
    <string name="stimulus">Estímulos</string>
    <string name="from_mother_to_mother">De mãe para mãe</string>

    <!-- View historic -->
    <string name="update_historic">Atualize o histórico do seu bebê para mais informações.</string>

    <!-- View historic -->
    <string name="stop_alarm">Parar Alarme</string>

    <!-- Info buttons -->
    <string name="info_botao_info">Para adicionar um bebê clique no botão \'+\'. Ao selecionar um bebê, o título dessa tela mudará e todo o restante do aplicativo é baseado nesse bebê selecionado.</string>
    <string name="info_botao_gecko">Muito obrigado por adquirir o Meu Bebê. Por favor, avalie-nos na Google Play para continuarmos a melhorar o aplicativo.</string>
    <string name="info_tela_vacinas">Clique em \'+\' para adicionar uma vacina. Dê um clique longo sobre uma vacina para poder adicionar um lembrete.</string>
    <string name="info_adicionar_vacina">Ao salvar, a vacina será adicionada a todos os bebês automaticamente. A idade máxima permitida é 5 anos.</string>
    <string name="info_historico">Para adicionar um histórico, clique em \'+\'. Para remover, use o botão de lixeira. A remoção apaga ambas as medidas do mês escolhido.</string>
    <string name="title_activity_my_baby">MyBabyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_baby">AddBabyActivity</string>
    <string name="title_activity_graphics">GraphicsActivity</string>
    <string name="title_activity_historic">HistoricActivity</string>
    <string name="title_activity_add_historic">AddHistoricActivity</string>
    <string name="title_activity_vaccines">VaccinesActivity</string>
    <string name="title_activity_add_vaccine">AddVaccineActivity</string>
    <string name="title_activity_vaccine_details">VaccineDetailsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_edit_baby">EditBabyActivity</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="create_new_user">Criar Login</string>
    <string name="new_user">Novo usuário</string>
    
    <!-- String for Facebook -->
    <string name="app_id">331180710351294</string>
    <string name="app_name">HelloFacebookSample</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">355198514515820</string>
    <string name="exception">Exception: %1$s</string>

</resources>