<?xml version="1.0" encoding="utf-8"?>

<!-- @author GeckoApps Team -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/tab_bar_neutral"
        android:gravity="center_vertical|right" >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/alarm"
            android:layout_weight="0.70"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/button_return"
            android:background="#00000000"
            android:onClick="loadLogin" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/dataFrameAlarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabBar"
        android:layout_above="@+id/navigationBar"
        android:gravity="center"
        android:background="@drawable/background_activity_neutral" >

        <EditText
            android:id="@+id/textViewVaccineInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/stopAlarmButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            android:clickable="false"
            android:focusable="false"
            android:inputType="textMultiLine"
            android:text="@string/vaccine_description"
            android:gravity="center" />

        <Button
            android:id="@+id/stopAlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="stopAlarmPressed"
            android:text="@string/stop_alarm" />
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navigation_bar_neutral"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/buttonMenuGraphics"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/button_graphics"
            android:background="#0000" />
        
        <ImageButton
            android:id="@+id/buttonMenuVaccines"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/button_vaccines"
            android:background="#0000" />
        
        <ImageButton
            android:id="@+id/buttonMenuMyBaby"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/button_my_baby"
            android:background="#0000" />
        
        <ImageButton
            android:id="@+id/buttonMenuProgress"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/button_progress"
            android:background="#0000" />
        
        <ImageButton
            android:id="@+id/buttonMenuTips"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/button_tips"
            android:background="#0000" />
    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigationSubtitles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#0000"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/buttonMenuGraphicsSubtitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/graphics"
            android:textColor="#FFFF"
            android:background="#0000"
            android:textSize="12dp" />
        
        <Button
            android:id="@+id/buttonMenuVaccinesSubtitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/vaccines"
            android:textColor="#FFFF"
            android:background="#0000"
            android:textSize="12dp" />
        
        <Button
            android:id="@+id/buttonMenuMyBabySubtitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/my_baby"
            android:textColor="#FFFF"
            android:background="#0000"
            android:textSize="12dp" />
        
        <Button
            android:id="@+id/buttonMenuProgressSubtitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/progress"
            android:textColor="#FFFF"
            android:background="#0000"
            android:textSize="12dp" />
        
        <Button
            android:id="@+id/buttonMenuTipsSubtitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/tips"
            android:textColor="#FFFF"
            android:background="#0000"
            android:textSize="12dp" />
    
    </LinearLayout>

</RelativeLayout>