<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/external_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100.0"
    android:orientation="vertical"
    android:background="@drawable/background_activity_neutral"
    tools:context=".AddHistoricActivity" >
    
    <RelativeLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.0"
        android:background="@drawable/navigation_bar_neutral" >
        
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_historic"
            android:textSize="@dimen/header"
            android:textColor="@color/header_color"
            android:gravity="center" />
        
        <ImageButton
            android:id="@+id/save_historic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/button_save"
            android:background="#0000"
            android:onClick="saveHistoricClicked" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="82.0"
        android:paddingTop="@dimen/large_margin_vertical"
        android:paddingBottom="@dimen/large_margin_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="100.0" >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15.0"
            android:layout_marginTop="@dimen/large_margin_vertical"
            android:text="@string/historic_info"
            android:textColor="#BB0000"
            android:textSize="@dimen/default_label_text_size"
            android:gravity="center" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10.0"
            android:orientation="horizontal"
            android:weightSum="100.0"
            android:gravity="bottom" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45.0"
                android:text="@string/age"
                android:textSize="@dimen/default_label_text_size"
                android:textColor="@android:color/white" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="27.5"
                android:text="@string/weight"
                android:textSize="@dimen/default_label_text_size"
                android:textColor="@android:color/white" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="27.5"
                android:text="@string/height"
                android:textSize="@dimen/default_label_text_size"
                android:textColor="@android:color/white" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10.0"
            android:orientation="horizontal"
            android:weightSum="100.0" >
            
            <EditText
                android:id="@+id/age_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45.0"
                android:hint="@string/age_hint" />
            
            <EditText
                android:id="@+id/weight_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="27.5"
                android:hint="@string/weight_hint"
                android:inputType="numberDecimal" />
            
            <EditText
                android:id="@+id/height_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="27.5"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.0"
        android:weightSum="100.0"
        android:orientation="horizontal"
        android:background="@drawable/navigation_bar_neutral" >
        
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20.0"
            android:src="@drawable/button_graphics_selected"
            android:background="#0000"
            android:onClick="graphicsClicked" />
        
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20.0"
            android:src="@drawable/button_vaccines"
            android:background="#0000"
            android:onClick="vaccinesClicked" />
        
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20.0"
            android:src="@drawable/button_my_baby"
            android:background="#0000"
            android:onClick="myBabyClicked" />
        
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20.0"
            android:src="@drawable/button_progress"
            android:background="#0000"
            android:onClick="progressClicked" />
        
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20.0"
            android:src="@drawable/button_tips"
            android:background="#0000"
            android:onClick="tipsClicked" />
        
    </LinearLayout>
    
</LinearLayout>