<?xml version="1.0" encoding="utf-8"?>

<!-- @author GeckoApps Team -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000" >
    
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <ImageButton
	        android:id="@+id/imageButtonCamera"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/button_image_camera"
	        android:background="#00000000" />
	
	    <ImageButton
	        android:id="@+id/imageButtonGallery"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/button_image_gallery"
	        android:background="#00000000" />
    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/layoutTexts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutButtons"
        android:orientation="horizontal" >
    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/camera"
	        android:textSize="20dp"
	        android:gravity="center" />
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/gallery"
	        android:textSize="20dp"
	        android:gravity="center" />

    </LinearLayout>
    
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTexts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel" />

</RelativeLayout>